# roboy_rqt_plugins

./: .gitmodules  CMakeLists.txt  README.md
pabiroboy_joint_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
pabiroboy_joint_control/include/pabiroboy_joint_control/: pabiroboy_joint_control.hpp
pabiroboy_joint_control/src/: pabiroboy_joint_control.cpp  pabiroboy_joint_control.ui
roboy_darkroom/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_darkroom/include/roboy_darkroom/: roboy_darkroom.hpp
roboy_darkroom/src/: roboy_darkroom.cpp  roboy_darkroom.ui
roboy_motor_calibration/: CMakeLists.txt  package.xml
roboy_motor_calibration/config/: myoArm.yaml  roboyArm.yaml  springParameters_calibration_motor0.csv  springParameters_calibration_motor1.csv  springParameters_calibration_motor3.csv  springParameters_calibration_motor4.csv  springParameters_calibration_motor5.csv  springParameters_calibration_motor7.csv  springParameters_calibration_motor8.csv
roboy_motor_calibration/config/roboyArmCalibrationData/: springParameters_calibration_motor11.csv  springParameters_calibration_motor8.csv
roboy_motor_calibration/include/roboy_motor_calibration/: roboy_motor_calibration.hpp
roboy_motor_calibration/src/: roboy_motor_calibration.cpp  roboy_motor_calibration.ui
roboy_motor_command/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_motor_command/include/roboy_motor_command/: roboy_motor_command.hpp
roboy_motor_command/src/: roboy_motor_command.cpp  roboy_motor_command.ui  roboy_motor_command.ui.autosave  speed_test.cpp
roboy_motor_status/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_motor_status/include/roboy_motor_status/: roboy_motor_status.hpp
roboy_motor_status/src/: roboy_motor_status.cpp  roboy_motor_status.ui
rqt_perspectives/: roboy_control.perspective
